[package]
name = "rletxtconv"
version = "1.0.0"
edition = "2024"
description = "Conway's Game of Life file format converter"
authors = ["Andrea Marano <andreamarano2004@gmail.com>"]

[lib]
name = "rletxtconv"
path = "src/lib.rs"

[[bin]]
name = "rletxtconv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
