[package]
name = "rletxtconv"
version = "1.0.0"
edition = "2024"
description = "Conway's Game of Life file format converter"
authors = ["Andrea Marano <andreamarano2004@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/LuMarans30/rletxtconv"
categories = ["command-line-utilities", "parser-implementations"]
keywords = ["conway", "rle", "plaintext", "parser"]

[lib]
name = "rletxtconv"
path = "src/lib.rs"

[[bin]]
name = "rletxtconv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
